--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -46,6 +46,7 @@ a {
 * {
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
+  font-family: var(--fontFamily);
 }
 
 .themeChanger {
