--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -6,7 +6,7 @@
   --secondaryBg: #fff;
   --shadow: 0 4px 4px 0 RGB(43 80 237 / 20%);
   --borderColor: #fafafa;
-  --fontFamily: 'GT Walsheim Pro', sann-serif;
+  --fontFamily: 'GT Walsheim Pro', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   --headerBg: #091a28;
   --buttonBg: #091a28;
 }
