--- a/styles/guestbook.module.scss
+++ b/styles/guestbook.module.scss
@@ -96,7 +96,7 @@
 
         .showLoginLoader {
           display: block;
-        }
+          border-color: var(--secondaryFg);        }
       }
 
       .one {
