--- a/components/pageheader/pageheader.module.scss
+++ b/components/pageheader/pageheader.module.scss
@@ -13,7 +13,7 @@
     font-weight: 700;
     font-size: 16px;
     font-family: var(--fontFamily);
-    background: var(--buttonBg);
+    background: #6b21a8;
     border: none;
     border-radius: 9999px;
     transition: background-color 200ms ease-out, color 200ms ease-out;
