--- a/components/services/services.module.scss
+++ b/components/services/services.module.scss
@@ -1,52 +1,51 @@
 .services_wrapper {
+  .services_header {
+    h2 {
+      margin: 0;
+    }
+  }
 
-	.services_header {
+  .services_content_wrapper {
+    display: grid;
+    grid-gap: 15px;
 
-		h2 {
-			margin: 0;
-		}
-	}
+    .service_wrapper {
+      width: 100%;
+      background: var(--secondaryBg);
+      border: 3px solid var(--borderColor);
+      box-shadow: var(--shadow);
+      border-radius: 8px;
+      padding: 15px;
+      height: fit-content;
 
-	.services_content_wrapper {
-		display: grid;
-		grid-gap: 15px;
+      .img_wrapper {
+        height: 60px;
+        margin-bottom: 10px;
 
-		.service_wrapper {
-			width: 100%;
-			background: var(--secondaryBg); 
-			border: 3px solid var(--borderColor);
-			box-shadow: var(--shadow);
-			border-radius: 8px;
-			padding: 15px;
-			height: fit-content;
+        img {
+          width: 60px;
+          height: 60px;
+        }
+      }
 
-			.img_wrapper {
-				height: 60px;
-				margin-bottom: 10px;
+      h3,
+      p {
+        margin: 0;
+      }
 
-				img {
-					width: 60px;
-					height: 60px;
-				}
-			}
+      h3 {
+        margin-bottom: 10px;
+        font-weight: 500;
+        font-size: 20px;
+        letter-spacing: -0.3px;
+      }
 
-			h3, p {
-				margin: 0;
-			}
-
-			h3 {
-				margin-bottom: 10px;
-				font-weight: 500;
-				font-size: 20px;
-  			letter-spacing: -0.3px;
-			}
-
-			p {
-				font-weight: 500;
-			  font-size: 15px;
-			  line-height: 1.5;
-			  opacity: 0.8;
-			}
-		}
-	}
+      p {
+        font-weight: 500;
+        font-size: 15px;
+        line-height: 1.5;
+        opacity: 0.8;
+      }
+    }
+  }
 }
