--- a/components/nav/nav.module.scss
+++ b/components/nav/nav.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
   color: #fff;
-  background: var(--headerBg);
+  // background: var(--headerBg);
+
   position: fixed;
   width: 100%;
   z-index: 100;
@@ -11,7 +12,7 @@
     align-items: center;
     background: var(--background);
     border-radius: 8px;
-    shadow: var(--shadow);
+    box-shadow: var(--shadow);
     padding: 5px 10px 7px 10px;
     width: fit-content;
 
@@ -23,7 +24,8 @@
   }
 
   .ham {
-    background: var(--headerBg);
+    // background: var(--headerBg);
+    backdrop-filter: blur(8px);
     padding: 12px 20px;
     display: flex;
     z-index: 6;
@@ -75,7 +77,7 @@
     position: fixed;
     transition: all 0.3s;
     background: #6b21a8;
-    top: -200px;
+    top: -300px;
     left: 0;
     padding: 0 30px;
     height: 0;
