--- a/components/nav/nav.module.scss
+++ b/components/nav/nav.module.scss
@@ -48,6 +48,10 @@
 
         div {
           width: 26px !important;
+
+          div {
+            background: var(--foreground) !important;
+          }
         }
       }
     }
@@ -57,12 +61,14 @@
 
       .prof {
         color: rgba(255, 255, 255, 0.6);
-
+        color: var(--secondaryFg);
         font-size: 10px;
       }
 
       .name {
+        color: var(--foreground);
         margin-bottom: 3px;
+        font-weight: 500;
         cursor: pointer;
       }
     }
@@ -76,12 +82,11 @@
     width: 100%;
     position: fixed;
     transition: all 0.3s;
-    background: #6b21a8;
     top: -300px;
     left: 0;
     padding: 0 30px;
     height: 0;
-    background: var(--headerBg);
+    background: var(--background);
   }
 
   .items {
@@ -90,18 +95,20 @@
       width: fit-content;
       cursor: pointer;
       margin-bottom: 10px;
-      transition: all 0.3s ease-in-out;
+      transition: background-color 0.3s ease-in-out, padding 0.3s ease-in-out;
       border-radius: 8px;
       font-weight: 500;
+      color: var(--foreground);
 
       &:hover {
-        background-color: #483b5275;
+        background-color: var(--hoverBg);
         padding: 10px 15px;
       }
     }
 
     .activePage {
       background-color: #942ee7;
+      color: #fff;
       padding: 10px 15px;
 
       &:hover {
