--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -9,6 +9,7 @@
   --fontFamily: 'GT Walsheim Pro', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   --headerBg: #091a28;
   --buttonBg: #091a28;
+  --hoverBg: #e3e3e3;
 }
 
 [data-theme='dark'] {
@@ -20,4 +21,5 @@
   --headerBg: #091a28;
   --borderColor: #1f2937;
   --buttonBg: #6b21a8;
+  --hoverBg: #483b5275;
 }
