--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -8,8 +8,12 @@
 
 		.image {
 			margin: 0 auto;
-			border-radius: 4px;
+			border-radius: 50%;
 		}
+	}
+
+	.data {
+		margin-top: 50px;
 	}
 }
 
