--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,18 +1,19 @@
 :root {
-  /* Your default theme */
   --background: #fafafa;
   --foreground: #365771;
   --secondaryFg: #365771a6;
   --secondaryBg: #fff;
-  --shadow: 0 4px 4px 0 RGB(43 80 237 / 20%);
+  --shadow: 0 0 4px 0 RGB(43 80 237 / 20%);
   --borderColor: #fafafa;
-  --fontFamily: 'GT Walsheim Pro', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  --fontFamily: "GT Walsheim Pro", -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif;
   --headerBg: #091a28;
   --buttonBg: #091a28;
   --hoverBg: #e3e3e3;
 }
 
-[data-theme='dark'] {
+[data-theme="dark"] {
   --background: #091a28;
   --foreground: white;
   --secondaryFg: #afadad;
