--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -8,7 +8,7 @@
   --fontFamily: "GT Walsheim Pro", -apple-system, BlinkMacSystemFont, Segoe UI,
     Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
     sans-serif;
-  --headerBg: #091a28;
+  --headerBg: #fff;
   --buttonBg: #091a28;
   --hoverBg: #e3e3e3;
 }
