--- a/components/nav/nav.module.scss
+++ b/components/nav/nav.module.scss
@@ -1,7 +1,6 @@
 .wrapper {
   color: #fff;
-  background: var(--headerBg);
-
+  background: #6b21a8;
   position: fixed;
   width: 100%;
   z-index: 100;
@@ -24,12 +23,12 @@
   }
 
   .ham {
-    // background: var(--headerBg);
     padding: 12px 20px;
     display: flex;
     z-index: 6;
     justify-content: space-between;
     position: relative;
+    background-color: #6b21a8;
 
     .ops {
       display: flex;
@@ -47,10 +46,6 @@
 
         div {
           width: 26px !important;
-
-          div {
-            background: var(--foreground) !important;
-          }
         }
       }
     }
@@ -59,13 +54,11 @@
       margin: auto 0;
 
       .prof {
-        color: rgba(255, 255, 255, 0.6);
-        color: var(--secondaryFg);
+        color: #afadad;
         font-size: 10px;
       }
 
       .name {
-        color: var(--foreground);
         margin-bottom: 3px;
         font-weight: 500;
         cursor: pointer;
@@ -85,7 +78,7 @@
     left: 0;
     padding: 0 30px;
     height: 0;
-    background: var(--background);
+    background-color: #6b21a8;
   }
 
   .items {
@@ -97,10 +90,10 @@
       transition: background-color 0.3s ease-in-out, padding 0.3s ease-in-out;
       border-radius: 8px;
       font-weight: 500;
-      color: var(--foreground);
+      color: #fff;
 
       &:hover {
-        background-color: var(--hoverBg);
+        background-color: #581c89;
         padding: 10px 15px;
       }
     }
