fix: doc layout

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -3,7 +3,7 @@
   --foreground: #365771;
   --secondaryFg: #365771a6;
   --secondaryBg: #fff;
-  --shadow: 0 0 4px 0 RGB(43 80 237 / 20%);
+  --shadow: 0 4px 4px 0 RGB(43 80 237 / 20%);
   --borderColor: #fafafa;
   --fontFamily: "GT Walsheim Pro", -apple-system, BlinkMacSystemFont, Segoe UI,
     Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
