--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -27,7 +27,7 @@
 }
 
 .copyright {
-  text-align: center;
+  text-align: start;
 }
 
 .links {
@@ -41,7 +41,6 @@
 
   li {
     margin-bottom: 0;
-
     font-weight: 500;
     transition: color 0.2s ease-out;
   }
