--- a/styles/blog.module.scss
+++ b/styles/blog.module.scss
@@ -15,8 +15,19 @@
         margin: 0 0 10px;
       }
 
+      p {
+        font-size: 12px;
+        margin-bottom: 20px;
+      }
+
       a {
+        font-size: 12px;
         color: var(--secondaryFg);
+        transition: color .3s ease;
+
+        &:hover {
+          color: #fff;
+        }
       }
     }
 
