style: light mode secondary background

--- a/components/hero/hero.module.scss
+++ b/components/hero/hero.module.scss
@@ -13,7 +13,7 @@
     font-weight: 700;
     font-size: 16px;
     font-family: var(--fontFamily);
-    background: #6b21a8;
+    background: var(--navBg);
     border: none;
     border-radius: 9999px;
     transition: background-color 200ms ease-out, color 200ms ease-out;
