--- a/components/project/project.module.scss
+++ b/components/project/project.module.scss
@@ -53,7 +53,7 @@
 
     .tool {
       width: fit-content;
-      background-color: #6b21a8;
+      background-color: var(--navBg);
       color: white;
       font-size: 14px;
       padding: 2px 4px;
