--- a/components/nav/nav.module.scss
+++ b/components/nav/nav.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   color: #fff;
-  background: #6b21a8;
+  background: var(--navBg);
   position: fixed;
   width: 100%;
   z-index: 100;
@@ -9,15 +9,13 @@
     display: none;
     margin-top: 40px;
     align-items: center;
-    background: var(--background);
     border-radius: 8px;
-    box-shadow: var(--shadow);
     padding: 5px 10px 7px 10px;
     width: fit-content;
 
     span {
       margin-right: 10px;
-      color: var(--foreground);
+      color: #fff;
       font-size: 14px;
     }
   }
@@ -28,7 +26,7 @@
     z-index: 6;
     justify-content: space-between;
     position: relative;
-    background-color: #6b21a8;
+    background: var(--navBg);
 
     .ops {
       display: flex;
@@ -56,11 +54,12 @@
       .prof {
         color: #afadad;
         font-size: 10px;
+        font-weight: 600;
       }
 
       .name {
         margin-bottom: 3px;
-        font-weight: 500;
+        font-weight: 800;
         cursor: pointer;
       }
     }
@@ -73,12 +72,12 @@
   .overlay {
     width: 100%;
     position: fixed;
-    transition: all 0.3s;
-    top: -300px;
+    transition: top 0.3s;
+    top: -1000px;
     left: 0;
     padding: 0 30px;
-    height: 0;
-    background-color: #6b21a8;
+    height: 100vh;
+    background: var(--navBg);
   }
 
   .items {
@@ -93,13 +92,13 @@
       color: #fff;
 
       &:hover {
-        background-color: #581c89;
+        background-color: var(--navsBg);
         padding: 10px 15px;
       }
     }
 
     .activePage {
-      background-color: #942ee7;
+      background-color: var(--navsBg);
       color: #fff;
       padding: 10px 15px;
 
@@ -148,7 +147,7 @@
     height: 100%;
     z-index: 100;
     padding: 80px 50px 144px 50px;
-    background: #6b21a8;
+    background: var(--navBg);
 
     .toggle {
       margin-left: 15px;
@@ -175,10 +174,12 @@
         .prof {
           color: rgba(255, 255, 255, 0.6);
           font-size: 15px;
+          font-weight: 500;
         }
 
         .name {
           font-size: 25px;
+          font-weight: 800;
           margin-bottom: 5px;
         }
       }
@@ -189,22 +190,23 @@
         .sideItem {
           font-size: 22px;
           cursor: pointer;
-          border-bottom: 1px solid #6b21a8;
+          border-bottom: 1px solid var(--navBg);
           width: fit-content;
           margin-bottom: 15px;
-          transition: all 0.3s ease-in-out;
+          transition: background-color 0.3s ease-in-out;
+          transition: padding 0.3s ease-in-out;
           border-radius: 8px;
           padding: 5px 15px 5px 10px;
           font-weight: 500;
 
           &:hover {
-            background-color: #942ee7;
+            background-color: var(--navsBg);
             padding: 5px 15px;
           }
         }
 
         .activePage {
-          background-color: #942ee7;
+          background-color: var(--navsBg);
           padding: 5px 15px;
         }
       }
