--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -50,7 +50,7 @@ a {
 }
 
 .themeChanger {
-  background-color: #942ee7;
+  background-color: var(--navsBg);
   height: 34px;
   width: 34px;
   display: grid;
