feat(home): activity calendar

--- a/components/hero/hero.module.scss
+++ b/components/hero/hero.module.scss
@@ -17,6 +17,7 @@
     border: none;
     border-radius: 9999px;
     transition: background-color 200ms ease-out, color 200ms ease-out;
+    margin-bottom: 40px;
 
     &:hover,
     &:focus {
