--- a/components/project/project.module.scss
+++ b/components/project/project.module.scss
@@ -8,6 +8,12 @@
   box-shadow: var(--shadow);
   border: 3px solid var(--borderColor);
 
+  .image {
+    width: 100%;
+    border-radius: 3px;
+    margin-bottom: 10px;
+  }
+
   .header {
     display: flex;
     justify-content: space-between;
