--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -20,8 +20,8 @@
   --foreground: white;
   --secondaryFg: #afadad;
   --secondaryBg: #18232c;
-  --navBg: #6b21a8;
-  --navsBg: #942ee7;
+  --navBg: #11191f;
+  --navsBg: #18232c;
   --shadow: 0 4px 4px 0 RGB(31 41 55 / 20%);
   --headerBg: #091a28;
   --borderColor: #18232c;
