--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,7 @@
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
+
 @font-face {
   font-weight: 400;
   font-family: "GT Walsheim Pro";
