style: font-family

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -16,6 +16,9 @@
 }
 
 [data-theme="dark"] {
+  --fontFamily: "GT Walsheim Pro", -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif;
   --background: #11191f;
   --foreground: white;
   --secondaryFg: #afadad;
