--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,39 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-
-
-
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 
 @layer base {
-  html {
-    @apply font-sans bg-[#11191f];
-
+  html,
+  body {
+    @apply font-sans bg-[#fafafa] dark:bg-[#11191f];
+    padding: 0;
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
-}
 
-
-// import variables
-@import "variables";
-
-html,
-body {
-  padding: 0;
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
+  * {
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
+  }
 }
 
 .themeChanger {
