--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,6 +15,10 @@
     font-family: 'Be Vietnam Pro', sans-serif;
   }
 
+  .custom-shadow {
+    box-shadow: 0 4px 4px 0 rgba(43,80,237, .2);
+  }
+
   * {
     font-family: 'Be Vietnam Pro', sans-serif;
     box-sizing: border-box;
